--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -6,4 +6,14 @@
     <AssemblyName>IntroSE.Kanban.Backend</AssemblyName>
     <OutputType>Library</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.17" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="EntityFramework" Version="6.4.4" />
+	</ItemGroup>
+	
 </Project>
